Fix KakaoTalk channel link formatting

--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
 
           <div class="request-links">
             <!-- 여기 링크를 실제 카카오톡 채널 / 인스타 등으로 교체 -->
-            <a class="link-chip" href="[https://pf.kakao.com/_xbxoxcKxj]" target="_blank" rel="noopener">
+            <a class="link-chip" href="https://pf.kakao.com/_xbxoxcKxj" target="_blank" rel="noopener">
               💬 카카오톡 채널 바로가기
             </a>
           </div>
@@ -1021,7 +1021,7 @@
     // 메인 신청 버튼 (예: 카카오톡 채널 링크)
     function goToMainRequest() {
       // 여기에 실제 카카오톡 채널 링크 넣기
-      window.open("[https://pf.kakao.com/_xbxoxcKxj]", "_blank");
+      window.open("https://pf.kakao.com/_xbxoxcKxj", "_blank");
     }
   </script>
 </body>
