--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>월홍 타로 커미션</title>
 
-  <!-- 포근한 느낌을 위한 폰트 (없어도 기본 폰트로 자동 대체됨) -->
+  <!-- 폰트 -->
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Noto+Sans+KR:wght@400;500;600&display=swap"
@@ -13,21 +13,22 @@
 
   <style>
     :root {
-      --bg-top: #fdf2ff;
-      --bg-middle: #ffe6ec;
-      --bg-bottom: #fffaf3;
+      /* 블랙 + 네온그린 테마 */
+      --bg-top: #020617;
+      --bg-middle: #020617;
+      --bg-bottom: #020617;
 
-      --card-bg: #ffffff;
-      --card-soft: #fff7f2;
-      --accent: #f97373;       /* 코랄 */
-      --accent-soft: #fbb6b6;  /* 코랄 연한 버전 */
-      --accent-deep: #ec4899;  /* 핑크 포인트 */
+      --card-bg: #020617;
+      --card-soft: #020617;
+      --accent: #22c55e;        /* 메인 네온 그린 */
+      --accent-soft: #16a34a;   /* 살짝 어두운 연두 */
+      --accent-deep: #4ade80;   /* 밝은 포인트 */
 
-      --text-main: #374151;
-      --text-soft: #6b7280;
+      --text-main: #e5fdf4;
+      --text-soft: #9ca3af;
 
-      --border-soft: rgba(248, 180, 180, 0.6);
-      --shadow-soft: 0 14px 40px rgba(248, 113, 113, 0.18);
+      --border-soft: rgba(74, 222, 128, 0.55);
+      --shadow-soft: 0 18px 45px rgba(34, 197, 94, 0.45);
 
       --radius-lg: 22px;
       --radius-md: 16px;
@@ -43,12 +44,10 @@
       font-family: "Noto Sans KR", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", sans-serif;
       color: var(--text-main);
-      background: linear-gradient(
-        180deg,
-        var(--bg-top) 0%,
-        var(--bg-middle) 35%,
-        var(--bg-bottom) 100%
-      );
+      background:
+        radial-gradient(circle at 0% 0%, rgba(22, 163, 74, 0.28) 0, transparent 45%),
+        radial-gradient(circle at 100% 100%, rgba(34, 197, 94, 0.22) 0, transparent 50%),
+        linear-gradient(180deg, var(--bg-top), var(--bg-middle), var(--bg-bottom));
     }
 
     a {
@@ -68,9 +67,9 @@
       position: sticky;
       top: 0;
       z-index: 20;
-      backdrop-filter: blur(16px);
-      background: rgba(255, 247, 244, 0.82);
-      border-bottom: 1px solid rgba(248, 180, 180, 0.5);
+      backdrop-filter: blur(18px);
+      background: rgba(2, 6, 23, 0.92);
+      border-bottom: 1px solid rgba(34, 197, 94, 0.5);
     }
 
     .nav {
@@ -87,6 +86,7 @@
       font-size: 1rem;
       font-weight: 600;
       letter-spacing: 0.06em;
+      color: var(--text-main);
     }
 
     .logo span {
@@ -107,7 +107,7 @@
     }
 
     .nav-links a:hover {
-      background: rgba(254, 202, 202, 0.7);
+      background: rgba(22, 163, 74, 0.2);
       color: var(--text-main);
     }
 
@@ -117,10 +117,10 @@
       border: none;
       padding: 7px 14px;
       font-size: 0.85rem;
-      background: linear-gradient(135deg, #fb7185, #f97373);
-      color: #fff;
+      background: linear-gradient(135deg, var(--accent), var(--accent-deep));
+      color: #020617;
       cursor: pointer;
-      box-shadow: 0 8px 20px rgba(248, 113, 113, 0.35);
+      box-shadow: 0 10px 26px rgba(34, 197, 94, 0.55);
     }
 
     /* 섹션 기본 */
@@ -170,11 +170,11 @@
       font-size: 2.2rem;
       line-height: 1.3;
       margin: 0 0 10px;
-      color: #111827;
+      color: #f9fafb;
     }
 
     .hero-title span {
-      background: linear-gradient(135deg, #fb7185, #ec4899);
+      background: linear-gradient(135deg, #4ade80, #22c55e);
       -webkit-background-clip: text;
       color: transparent;
     }
@@ -183,27 +183,27 @@
       font-size: 0.9rem;
       letter-spacing: 0.12em;
       text-transform: uppercase;
-      color: var(--text-soft);
+      color: var(--accent-deep);
       margin-bottom: 6px;
     }
 
     .hero-text {
       font-size: 0.95rem;
-      color: var(--text-main);
+      color: var(--text-soft);
       margin-bottom: 18px;
     }
 
     .hero-highlight {
       font-size: 0.9rem;
-      color: var(--text-soft);
-      background: rgba(255, 255, 255, 0.7);
+      color: var(--accent-deep);
+      background: rgba(15, 23, 42, 0.9);
       padding: 10px 14px;
       border-radius: 999px;
       display: inline-flex;
       align-items: center;
       gap: 6px;
       margin-bottom: 14px;
-      border: 1px solid rgba(254, 202, 202, 0.8);
+      border: 1px solid rgba(74, 222, 128, 0.6);
     }
 
     .hero-highlight span {
@@ -222,10 +222,10 @@
       border: none;
       padding: 9px 18px;
       font-size: 0.95rem;
-      background: linear-gradient(135deg, #fb7185, #f97373);
-      color: #fff;
+      background: linear-gradient(135deg, var(--accent), var(--accent-deep));
+      color: #020617;
       cursor: pointer;
-      box-shadow: 0 12px 32px rgba(248, 113, 113, 0.4);
+      box-shadow: 0 12px 32px rgba(34, 197, 94, 0.6);
       display: inline-flex;
       align-items: center;
       gap: 6px;
@@ -235,8 +235,8 @@
       border-radius: 999px;
       padding: 8px 15px;
       font-size: 0.9rem;
-      border: 1px solid rgba(248, 180, 180, 0.9);
-      background: rgba(255, 255, 255, 0.6);
+      border: 1px solid rgba(74, 222, 128, 0.6);
+      background: rgba(15, 23, 42, 0.9);
       color: var(--text-main);
       cursor: pointer;
     }
@@ -248,11 +248,12 @@
     }
 
     .hero-card {
-      background: radial-gradient(circle at top left, #ffe4e6, #fff7f2);
+      background:
+        radial-gradient(circle at top left, rgba(34, 197, 94, 0.28), #020617);
       border-radius: 28px;
       padding: 18px 18px 16px;
       box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(254, 202, 202, 0.9);
+      border: 1px solid rgba(34, 197, 94, 0.65);
     }
 
     .hero-card-title {
@@ -282,16 +283,17 @@
     }
 
     .mini-pill {
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(15, 23, 42, 0.9);
       border-radius: 999px;
       padding: 7px 10px;
-      border: 1px solid rgba(254, 202, 202, 0.9);
+      border: 1px solid rgba(74, 222, 128, 0.7);
+      color: var(--text-main);
     }
 
     .hero-meta {
       margin-top: 10px;
       padding-top: 8px;
-      border-top: 1px dashed rgba(254, 202, 202, 0.9);
+      border-top: 1px dashed rgba(34, 197, 94, 0.7);
       font-size: 0.78rem;
       color: var(--text-soft);
       display: flex;
@@ -307,7 +309,7 @@
       border-radius: var(--radius-lg);
       padding: 18px 18px 16px;
       box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(254, 202, 202, 0.7);
+      border: 1px solid var(--border-soft);
     }
 
     .price-grid {
@@ -323,10 +325,10 @@
     }
 
     .price-card {
-      background: var(--card-soft);
+      background: radial-gradient(circle at top, rgba(15, 23, 42, 0.9), #020617);
       border-radius: var(--radius-md);
       padding: 14px 14px 12px;
-      border: 1px solid rgba(254, 202, 202, 0.9);
+      border: 1px solid rgba(74, 222, 128, 0.6);
     }
 
     .price-title {
@@ -344,7 +346,7 @@
     .price-value {
       font-size: 0.95rem;
       font-weight: 600;
-      color: #b91c1c;
+      color: #bbf7d0;
       margin-bottom: 4px;
     }
 
@@ -357,8 +359,8 @@
       font-size: 0.78rem;
       border-radius: 999px;
       padding: 3px 8px;
-      background: rgba(254, 215, 170, 0.7);
-      color: #7c2d12;
+      background: rgba(21, 128, 61, 0.7);
+      color: #ecfdf5;
       display: inline-block;
       margin-bottom: 6px;
     }
@@ -377,11 +379,12 @@
 
     .reserve-box {
       margin-top: 12px;
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(15, 23, 42, 0.95);
       border-radius: var(--radius-md);
       padding: 12px 14px;
       font-size: 0.86rem;
-      border: 1px dashed rgba(254, 202, 202, 0.9);
+      border: 1px dashed rgba(34, 197, 94, 0.7);
+      color: var(--text-main);
     }
 
     .reserve-label {
@@ -404,11 +407,11 @@
     }
 
     footer {
-      border-top: 1px solid rgba(248, 180, 180, 0.6);
+      border-top: 1px solid rgba(34, 197, 94, 0.5);
       padding: 18px 0 26px;
       font-size: 0.8rem;
       color: var(--text-soft);
-      background: rgba(255, 247, 244, 0.7);
+      background: rgba(2, 6, 23, 0.95);
     }
 
     .footer-inner {
@@ -473,7 +476,7 @@
             채팅 리딩을 지향합니다. 부담 없이, 그러나 가볍지 않게 마음을 살펴봐 드립니다.
           </p>
           <div class="hero-highlight">
-            <span>☁️</span>
+            <span>✶</span>
             연애 · 관계 · 일상 고민 · 진로 방향
           </div>
 
@@ -653,7 +656,7 @@
   <footer>
     <div class="container footer-inner">
       <span>© <span id="year"></span> 월홍 타로. All rights reserved.</span>
-      <span>Made with 🌙 & Sea Sunset</span>
+      <span>Made with 🌙 & Neon Green</span>
     </div>
   </footer>
 
